--- a/backend/.htaccess
+++ b/backend/.htaccess
@@ -8,10 +8,11 @@ Header always set X-Content-Type-Options nosniff
 Header always set X-Frame-Options DENY
 Header always set X-XSS-Protection "1; mode=block"
 
-# CORS headers for API
-Header always set Access-Control-Allow-Origin "*"
-Header always set Access-Control-Allow-Methods "GET, POST, PUT, DELETE, OPTIONS"
-Header always set Access-Control-Allow-Headers "Content-Type, Authorization, X-Requested-With"
+# CORS headers for API - handled by config.php
+# Remove these lines as they conflict with config.php CORS settings
+# Header always set Access-Control-Allow-Origin "*"
+# Header always set Access-Control-Allow-Methods "GET, POST, PUT, DELETE, OPTIONS"
+# Header always set Access-Control-Allow-Headers "Content-Type, Authorization, X-Requested-With"
 
 # Handle preflight requests
 RewriteCond %{REQUEST_METHOD} OPTIONS
